<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mobile</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_valid_phone">Enter valid phone number</string>
    <string name="password_limit">Minimum 8 characters</string>
    <string name="enter_password">Enter password</string>
    <string name="login_error">Login error</string>
    <string name="email_taken">Email is already taken</string>
    <string name="error">Error</string>
    <string name="invalid_password">Invalid password</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Log Out</string>
    <string name="btn_link_sign_up"/>
    <string name="btn_login"/>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?Log In!</string>
    <string name="successful_login">Welcome!</string>
    <string name="not_registered">Do not have an account? Sign Up!</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="category">Category: </string>
    <string name="packaging">Packaging: </string>
    <string name="producer">Producer: </string>
    <string name="price">Price: </string>
    <string name="components">Components: </string>
    <string name="no_internet">No Internet connection</string>
    <string name="update_failure">Update failure</string>
    <string name="details">Details</string>
    <string name="account">Account</string>
    <string name="image_uploaded">Image uploaded!</string>
    <string name="username_updated">Username is updated!</string>
    <string name="email_updated">Email is updated!</string>
    <string name="tab2">Tab2</string>
    <string name="avatar_picture">Avatar picture</string>
    <string name="update">Update</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="image">Image</string>
    <string name="msg_token_fmt">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="notification">Notification is opened!</string>
    <string name="list_updated">List updated!</string>
    <string name="show">Show</string>
    <string name="add_medecine">Add medecine</string>
    <string name="required">Recuired</string>
    <string name="submit">Submit</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>

</resources>

