<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostMedicineActivity"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:fontFamily="@font/rushing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="36sp"
        android:text="@string/add_medecine"
        android:textAlignment="center">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_medicine_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_medicine_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_medicine_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_medicine_producer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/producer"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_medicine_producer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_medicine_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Price"
        app:errorEnabled="true"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_medicine_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/post_medicine_submitBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimaryDark"/>

    <ProgressBar
        android:id="@+id/post_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible" />

</LinearLayout>